<resources>
    <string name="app_name">eventsapp</string>
    <string name="title_activity_homepage">Homepage</string>
    <string name="categories">Categories</string>
    <string name="home_page">Home Page</string>
    <string name="favorites">Favorites</string>
    <string name="calendar">Calendar</string>
    <string name="settings">Settings</string>
    <string name="feedback">Feedback</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="btn_interest_text">Interest</string>
    <string name="btn_interest_text_2">Interest</string>
    <string name="btn_go_text">Going</string>
    <string name="btn_go_text_2">Not going</string>
    <string name="tv_start_data">Start Data</string>
    <string name="tv_stop_data">Stop Data</string>
    <string name="tv_title_settings">Settings</string>
    <string name="tv_text_reminder">Events Reminder</string>
    <string name="tv_text_suggestion">Weekly suggestions</string>
    <string name="tv_title_filter">Filter by:</string>
    <string name="tv_text_price_range">Price Range</string>
    <string name="tv_text_date_range">Date Range</string>
    <string name="tv_price_max">\u0024\u0024 </string>
    <string name="tv_price_min">\u0024</string>
    <string name="tv_date">From</string>
    <string name="tv_to">To</string>
    <string name="tv_upcoming_events">Upcoming Events</string>
    <string name="hint_date">E.g., Dec 4 2014</string>
    <string name="description_x_logo">Exit settings</string>
    <string name="description_dollar_logo">Dollar icon</string>
    <string name="tv_no_suggestion">No matching suggestions</string>

    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="choose_location">Choose location</string>
    <string name="channel_name">Event Reminder</string>
    <string name="channel_description">Reminds you about an upcoming event from your favorites</string>
    <string name="no_favorite_events">No Favorite Events</string>
</resources>
